--- a/drivers/quigg/pair/imitateOff.html
+++ b/drivers/quigg/pair/imitateOff.html
@@ -12,6 +12,11 @@
 			},1000);
 		}
 	});
+
+	Homey.on('error', function(){
+		document.getElementById('error').style.opacity = 1;
+	});
+
 	setTimeout(function(){
 		Homey.emit('imitateOff', {counter: counterOff} );
 	},1000);
@@ -265,6 +270,7 @@
 	C180.189,1073.821,180.045,1072.532,180.045,1071.209z"/>
 </svg>
 	<p data-i18n="pair.imitateOff" style="font-size: 3vh;"></p>
+	<p id="error" data-i18n="pair.error" style="font-size: 3vh; color:#800; opacity:0"></p>
 </center>
 
 <i class="fa fa-check-circle" id="fadeInOff" aria-hidden="true" style="z-index: 2; position:absolute; top:20vh; left:38vw; font-size:30vh; color:#080; opacity:0;"></i>
