--- a/drivers/quigg/pair/imitateOn.html
+++ b/drivers/quigg/pair/imitateOn.html
@@ -15,6 +15,10 @@
 		}
 	});
 
+	Homey.on('error', function(){
+		document.getElementById('error').style.opacity = 1;
+	});
+
 	Homey.emit('imitateOn', {counter: counterOn} );
 </script>
 
@@ -266,6 +270,7 @@
 	C180.189,1073.821,180.045,1072.532,180.045,1071.209z"/>
 </svg>
 	<p data-i18n="pair.imitateOn" style="font-size: 3vh;"></p>
+	<p id="error" data-i18n="pair.error" style="font-size: 3vh; color:#800; opacity:0"></p>
 </center>
 
 <i class="fa fa-check-circle" id="fadeInOn" aria-hidden="true" style="z-index: 2; position:absolute; top:20vh; left:38vw; font-size:30vh; color:#080; opacity:0;"></i>
